Add gc/ package — GC theory and demos
- GC_Theory.md: JVM memory layout, generational hypothesis, all 5 GC algorithms
  (Serial, Parallel, G1, ZGC, Shenandoah), reference types, finalize() deprecation,
  6 memory leak patterns, JVM flags, programmatic monitoring, full Q&A
- GCRootsDemo.java: reachability tracing, GC roots (static/stack), circular ref
  demo proving why Java uses tracing over reference counting, finalize() resurrection
- ReferenceTypesDemo.java: Strong/Soft/Weak/Phantom refs with live examples,
  WeakHashMap, ReferenceQueue, Cleaner API (modern finalize replacement)
- MemoryLeakPatternsDemo.java: 5 classic patterns — static collection, listeners,
  ThreadLocal in pools, inner class reference, missing equals/hashCode
- GCMonitoringDemo.java: GarbageCollectorMXBean, MemoryPoolMXBean, GC notification
  listener, GC overhead measurement, heap dump flags
- ROADMAP.md: added Phase 5 for GC

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>